--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
+    "production": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
