--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.21",
+    "@types/passport": "^1.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "passport": "^0.5.2",
+    "postgres": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sequelize": "^6.14.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -27,7 +38,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start server development": "nodemon --watch \"server/**/*.ts\" --exec \"./node_modules/.bin/ts-node\" server/app.ts"
   },
   "repository": {
     "type": "git",
