Add frontend auth logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "outDir": "./dist",
+    "typeRoots": [
+      "./server/types"
+    ]
   },
   "include": [
     "src"
-  ]
+  ],
 }
